insights/4.2/release-notes.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/insights/4.2/release-notes/)[Next](https://docs.tigergraph.com/insights/4.2/release-notes/)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/insights/4.2/release-notes/)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/insights/4.2/release-notes/)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
  *     * [Overview](https://docs.tigergraph.com/insights/4.2/intro/)
    * [Get Started](https://docs.tigergraph.com/insights/4.2/intro/get-started)
    * [Applications](https://docs.tigergraph.com/insights/4.2/intro/applications)
  *     * [Widgets](https://docs.tigergraph.com/insights/4.2/widgets/)
      * [Graph](https://docs.tigergraph.com/insights/4.2/widgets/graph-widget)
      * [Map](https://docs.tigergraph.com/insights/4.2/widgets/map-widget)
      * [Table](https://docs.tigergraph.com/insights/4.2/widgets/table-widget)
      * [Value](https://docs.tigergraph.com/insights/4.2/widgets/single-value)
      * [Markdown](https://docs.tigergraph.com/insights/4.2/widgets/markdown-widget)
      * [Line Chart](https://docs.tigergraph.com/insights/4.2/widgets/line-chart)
      * [Bar Chart](https://docs.tigergraph.com/insights/4.2/widgets/bar-chart)
      * [Pie Chart](https://docs.tigergraph.com/insights/4.2/widgets/pie-chart)
      * [Sankey](https://docs.tigergraph.com/insights/4.2/widgets/sankey)
      * [Scatter Chart](https://docs.tigergraph.com/insights/4.2/widgets/scatter-plot-widget)
      * [Inputs](https://docs.tigergraph.com/insights/4.2/widgets/inputs)
    * [Actions](https://docs.tigergraph.com/insights/4.2/widgets/actions)
    * [Conditional Styling](https://docs.tigergraph.com/insights/4.2/widgets/conditional-styling)
  *     * [Insights Release Notes](https://docs.tigergraph.com/insights/4.2/release-notes/)
    * [Legacy Version Documentation](https://docs.tigergraph.com/insights/4.2/release-notes/legacy-tg-versions)


Insights 4.2 Pre
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [Insights 4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
  * [Insights Release Notes](https://docs.tigergraph.com/insights/4.2/release-notes/)


[Edit this Page](https://github.com/tigergraph/insights-docs/edit/4.2/modules/release-notes/pages/index.adoc)
### Contents
  * [4.2](https://docs.tigergraph.com/insights/4.2/release-notes/#_4_2)
  * [3.10](https://docs.tigergraph.com/insights/4.2/release-notes/#_3_10)
  * [3.9](https://docs.tigergraph.com/insights/4.2/release-notes/#_3_9)
  * [General](https://docs.tigergraph.com/insights/4.2/release-notes/#_general)
  * [Graph Widgets](https://docs.tigergraph.com/insights/4.2/release-notes/#_graph_widgets)
  * [3.8](https://docs.tigergraph.com/insights/4.2/release-notes/#_3_8)
  * [General](https://docs.tigergraph.com/insights/4.2/release-notes/#_general_2)
  * [Graph Widgets](https://docs.tigergraph.com/insights/4.2/release-notes/#_graph_widgets_2)


# Insights Release Notes
### Contents
  * [4.2](https://docs.tigergraph.com/insights/4.2/release-notes/#_4_2)
  * [3.10](https://docs.tigergraph.com/insights/4.2/release-notes/#_3_10)
  * [3.9](https://docs.tigergraph.com/insights/4.2/release-notes/#_3_9)
  * [General](https://docs.tigergraph.com/insights/4.2/release-notes/#_general)
  * [Graph Widgets](https://docs.tigergraph.com/insights/4.2/release-notes/#_graph_widgets)
  * [3.8](https://docs.tigergraph.com/insights/4.2/release-notes/#_3_8)
  * [General](https://docs.tigergraph.com/insights/4.2/release-notes/#_general_2)
  * [Graph Widgets](https://docs.tigergraph.com/insights/4.2/release-notes/#_graph_widgets_2)


## [](https://docs.tigergraph.com/insights/4.2/release-notes/#_4_2)4.2
  * [Support LIST and MAP query parameter types](https://docs.tigergraph.com/insights/4.2/widgets/list-and-map) - This allow users to create widgets in Insights that use GSQL queries with list or map parameters.
  * [Add support for global variables](https://docs.tigergraph.com/insights/4.2/widgets/global-variables) - This allows users to create global variables that can be used across multiple widgets in the same application.


## [](https://docs.tigergraph.com/insights/4.2/release-notes/#_3_10)3.10
  * [Changing Single Value Widget to Value Widget](https://docs.tigergraph.com/insights/4.2/widgets/single-value) - Modified the value element of insights to support the mapping of multiple values.
  * [Added Markdown Widget](https://docs.tigergraph.com/insights/4.2/widgets/markdown-widget) - This addition allows users to add formatted text, links, images, and other rich content to the dashboards.
  * [Conditional Styling Widget Update](https://docs.tigergraph.com/insights/4.2/widgets/conditional-styling) - Conditional styling can now be applied to edges, with the addition of an `always` [option](https://docs.tigergraph.com/insights/4.2/widgets/conditional-styling#_always_option) in the condition dropdown.
  * [Added Scatter Chart Widget](https://docs.tigergraph.com/insights/4.2/widgets/scatter-plot-widget) - The scatter chart will provide a visual representation of the relationship between two numerical variables, allowing users to identify patterns or correlations in the data.


## [](https://docs.tigergraph.com/insights/4.2/release-notes/#_3_9)3.9
### [](https://docs.tigergraph.com/insights/4.2/release-notes/#_general)General
  * Added support for sharing and multi-user editing of the same application.
  * Added the ability for users to save a widget independently instead of tying it to an application.


### [](https://docs.tigergraph.com/insights/4.2/release-notes/#_graph_widgets)Graph Widgets
  * Add a mini-map to the Graph Widgets for easier navigation.


## [](https://docs.tigergraph.com/insights/4.2/release-notes/#_3_8)3.8
### [](https://docs.tigergraph.com/insights/4.2/release-notes/#_general_2)General
  * Dynamic widget title support with embedded variables
  * Auto-refresh widget by setting a refresh interval
  * Allow passing variables to Write Own GSQL query
  * Performance and UI improvements


### [](https://docs.tigergraph.com/insights/4.2/release-notes/#_graph_widgets_2)Graph Widgets
  * Added attribute-level filtering
  * Added Force layout
  * Added Explore Neighbors function
  * Enabled right-click pathfinding, PageRank, and Louvain algorithm support
  * Added Undo/Redo functions


3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


